2001-11-10  Benedikt Roth  <Benedikt.Roth@gmx.net>

	* components/help/hyperbola-nav-index.c:
	* components/help/hyperbola-nav-tree.c:
	Include <config.h> so that localization works

2001-11-08  Darin Adler  <darin@bentspoon.com>
	
	Patch from Peter Snyder <kafer77a@ameritech.net> to add a
	disclaimer to the text view to make it clear that it's a read-only
	view of the text.

	* components/text/nautilus-text-view.c:
	(nautilus_text_view_initialize): Add a label with a disclaimer.

2001-11-08  Darin Adler  <darin@bentspoon.com>

	* src/file-manager/fm-error-reporting.c:
	(fm_report_error_loading_directory),
	(fm_report_error_renaming_file), (fm_report_error_setting_group),
	(fm_report_error_setting_owner),
	(fm_report_error_setting_permissions):
	Stop telling people to tell John Sullivan about these errors.

2001-11-08  Anders Carlsson  <andersca@gnu.org>

	* libnautilus-private/nautilus-icon-dnd.c 
	(nautilus_icon_dnd_update_drop_target): Plug a leak.

=== nautilus 1.0.6 ===

2001-11-07  Darin Adler  <darin@bentspoon.com>

	* configure.in: Update version to 1.0.6.
	* NEWS: Prepare for 1.0.6 release.

	* components/help/Makefile.am: Must distribute the new
	data file.

2001-11-01  Louise Miller  <louise.miller@sun.com>

        * Lots of files in components/help
        Intregation of scrollkeeper indexing capabilities
        into nautilus.

2001-10-31  Darin Adler  <darin@bentspoon.com>

	* README: This isn't HEAD any more.
	
	* libnautilus-private/nautilus-link-desktop-file.c:
	* libnautilus-private/nautilus-link-historical.c:
	Fix libxml include paths.
	
	* libnautilus-private/nautilus-monitor.c:
	(process_fam_notifications): Tweak comment.
	
	* src/nautilus-window-manage-views.c:
	(cancel_viewed_file_changed_callback), (update_for_new_location):
	Monitor the existence of the currently viewed file, so we notice
	when the file is deleted.

2001-10-25  Darin Adler  <darin@bentspoon.com>

	* src/file-manager/fm-directory-view.c: Oops! Left in the 5 second